<resources>
    <string name="app_name">News App</string>
    <string name="search_hint">Find articles on...</string>
    <string name="search_button_text">Go!</string>
    <string name="no_internet">No internet connection</string>
    <string name="empty_text">No results</string>

    <string name="title">Title:</string>
    <string name="section">Section:</string>
    <string name="date">Date:</string>

    <string name="settings_title">Earthquake Settings</string>
    <string name="settings_menu_item">Settings</string>

    <string name="settings_from_date">From Date</string>
    <string name="settings_from_date_key" translatable="false">from-date</string>
    <string name="settings_from_date_default" translatable="false">1998-12-31</string>

    <string name="settings_sort">Sort by</string>
    <string name="settings_sort_key">orderBy</string>
    <string name="settings_sort_default">@string/settings_sort_relevance_value</string>

    <string name="settings_sort_relevance_label">Relevance</string>
    <string name="settings_sort_relevance_value">relevance</string>

    <string name="settings_sort_newest_label">Newest</string>
    <string name="settings_sort_newest_value">newest</string>

    <string name="settings_sort_oldest_label">Oldest</string>
    <string name="settings_sort_oldest_value">oldest</string>

</resources>
